--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@ s1.charset='UTF-8';
 s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
-</script>''
+</script>
 <!--End of Tawk.to Script-->
 
 <style>
